<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <parent>
        <artifactId>singa-all</artifactId>
        <groupId>bio.singa</groupId>
        <version>0.7.0</version>
        <relativePath>../singa-all/pom.xml</relativePath>
    </parent>

    <artifactId>singa-structure</artifactId>
    <version>0.7.0</version>
    <packaging>jar</packaging>

    <dependencies>
        <dependency>
            <groupId>bio.singa</groupId>
            <artifactId>singa-mathematics</artifactId>
            <version>0.7.0</version>
        </dependency>
        <dependency>
            <groupId>bio.singa</groupId>
            <artifactId>singa-features</artifactId>
            <version>0.7.0</version>
        </dependency>
        <dependency>
            <groupId>bio.singa</groupId>
            <artifactId>singa-chemistry</artifactId>
            <version>0.7.0</version>
        </dependency>
        <dependency>
            <groupId>org.rcsb</groupId>
            <artifactId>mmtf-codec</artifactId>
            <version>1.0.8</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-slf4j-impl</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.rcsb</groupId>
            <artifactId>mmtf-api</artifactId>
            <version>1.0.8</version>
        </dependency>
    </dependencies>
</project>